[gd_scene load_steps=4 format=2]

[ext_resource path="res://Controller/Scripts/mouse_bounds.gd" type="Script" id=1]
[ext_resource path="res://Controller/Scripts/mouse_controller.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 165 )

[node name="MouseController" type="Node"]
script = ExtResource( 2 )

[node name="MouseBounds" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseBounds"]
visible = false
shape = SubResource( 1 )

[connection signal="on_initial_position" from="." to="MouseBounds" method="_on_MouseController_on_initial_position"]
[connection signal="on_mouse_move" from="." to="MouseBounds" method="_on_MouseController_on_mouse_move"]
[connection signal="on_angle_change" from="MouseBounds" to="." method="_on_MouseBounds_on_angle_change"]
